--- a/src/styles/components/loader.css
+++ b/src/styles/components/loader.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh; /* Pantalla completa */
+  height: 100dvh; /* Pantalla completa */
   background-color: #f4f6f8; /* Color de fondo muy claro */
 }
 
