--- a/src/styles/layout/layout.css
+++ b/src/styles/layout/layout.css
@@ -11,7 +11,7 @@
 .page {
   display: flex;
   flex-direction: column;
-  min-height: 100vh - 56px; /* Ajuste para BottomNav */
+  min-height: 100dvh - 56px; /* Ajuste para BottomNav */
 }
 
 .page, .container {
